--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,3 +8,4 @@ eureka.client.register-with-eureka=true
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
 
+gateway.httpclient.source-ip=${GATEWAY_IP}
